[workspace]
resolver = "2"
members = [
    "workspace/resalt-*",
# "resalt-auth"
# "resalt-config"
# "resalt-ldap"
# "resalt-middleware"
# "resalt-models"
# "resalt-routes"
# "resalt-salt"
# "resalt-scheduler"
# "resalt-security"
# "resalt-server"
# "resalt-storage"
# "resalt-storage-files"
# "resalt-storage-mysql"
# "resalt-storage-redis"
# "resalt-updater"
]
default-members = [
    "workspace/resalt-server",
]

[workspace.package]
version = "0.5.5"
authors = ["Max Faxälv <max@foorack.com>"]
edition = "2021"
license = "MIT"
publish = false
readme = "README.md"
description = "Resalt is a free, open-source, self-hosted, web-based administration and monitoring panel for SaltStack."
repository = "https://github.com/resalt-dev/resalt"

[workspace.dependencies]
axum = { version = "0.6.20" , features = ["json", "original-uri"], default-features = true }
chrono = { version = "0.4.31", features = [], default-features = false }
log = { version = "0.4.17" }
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread"], default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.0", features=["normalize-path"], default-features = false }

[workspace.metadata.resalt]
news = [
    "Resalt 0.4.1 released§Resalt 0.4.1 is now available. Removed legacy graph system, and implemented optional Prometheus metrics export endpoint.",
    "Resalt 0.4.0 released§Resalt 0.4.0 is now available. Implemented LDAP syncing of groups and email, and several UI and UX improvements.",
    "Resalt 0.3.1 released§Resalt 0.3.1 is now available. Fixed minor issue where Minion List would not paginate.",
    "Resalt 0.3.0 released§Resalt 0.3.0 is now available. Implemented the ability to store custom filters as \"Presets\". Additionally several minor UI and permission fixes.",
    "Resalt 0.2.2 released§Resalt 0.2.2 is now available. Reimplemented permission checking logic, ability to jump from Minion to Run directly, and several minor UI fixes.",
    "Resalt 0.2.1 released§Resalt 0.2.1 is now available. Minor fixes to Dashboard UI, and fixed a bug where the Salt API would reject Run requests even when a user is authenticated.",
    "Resalt 0.2.0 released§Resalt 0.2.0 is now available. This release includes a fix where compliance data wasn't stored when triggered from minion, improved permission checking, and several UI fixes.",
    "Resalt 0.1.6 released§Resalt 0.1.6 is now available. This release includes large UI updates, continued implementation of the permission system, the ability to see grains of offline minions, dependency updates, accessibility updates, enforcement of code linting, a severe improvement of compilation times for the frontend, and a lot of bug fixes.",
]

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
