[package]
name = "resalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
actix-service = "2.0.2"
actix-web = { version = "4", features=["rustls"] }
awc = { version = "3", features=["rustls"] }

# DB
diesel = { version = "1.4.8", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"

# Auth
ldap3 = { version = "0.10.5", features = ["rustls"] }
argon2 = "0.4.0"

# Logging
log = "0.4.16"
env_logger = "0.9.0"

# Threading
async-stream = "0.3.3"
tokio = { version = "1", features = ["full"] }
# Mutex, RwLock, Once, etc..
parking_lot = "0.12.0"
futures = "0.3.21"
futures-core = "0.3.21"
futures-util = "0.3.21"

# Utils
chrono = "0.4"
config = "0.13.1"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

# TLS
rustls = "0.20.4"
rustls-native-certs = "0.6.2"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

