[package]
name = "resalt-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
serde_json = { workspace = true }