[package]
name = "resalt-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
env_logger = { version = "0.10.1", features = ["auto-color"], default-features = false }
log = { workspace = true }
resalt-api = { path = "../resalt-api" }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-storage = { path = "../resalt-storage" }
resalt-storage-files = { path = "../resalt-storage-files" }
resalt-storage-mysql = { path = "../resalt-storage-mysql" }
resalt-storage-redis = { path = "../resalt-storage-redis" }
serde_json = { workspace = true }
tokio = { workspace = true }
