[package]
name = "resalt-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
resalt-api = { path = "../resalt-api" }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-storage = { path = "../resalt-storage" }
serde_json = { workspace = true }
tokio = { workspace = true }
