[package]
name = "resalt-routes"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
log = { workspace = true }
regex = { version = "1.10.2", features = [], default-features = false }
resalt-api = { path = "../resalt-api" }
resalt-auth = { path = "../resalt-auth" }
resalt-config = { path = "../resalt-config" }
resalt-frontend = { path = "../resalt-frontend" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { workspace = true }
