[package]
name = "resalt-security"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
argon2 = { version = "0.5.2", features = ["alloc", "password-hash"], default-features = false }
log = { workspace = true }
regex = { version = "1.10.2", features = [], default-features = false }
resalt-models = { path = "../resalt-models" }
serde_json = { workspace = true }