[package]
name = "resalt-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
env_logger = { version = "0.10.1", features = ["auto-color"], default-features = false }
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-routes = { path = "../resalt-routes" }
resalt-salt = { path = "../resalt-salt" }
resalt-storage = { path = "../resalt-storage" }
tokio = { workspace = true }
tower = { workspace = true }
