[package]
name = "resalt-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-routes = { path = "../resalt-routes" }
resalt-salt = { path = "../resalt-salt" }
resalt-storage = { path = "../resalt-storage" }
resalt-update = { path = "../resalt-update" }
tokio = { workspace = true }
tower = { workspace = true }
