[package]
name = "resalt-storage-files"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }