[package]
name = "resalt-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage-files = { path = "../resalt-storage-files" }
resalt-storage-redis = { path = "../resalt-storage-redis" }
serde = { workspace = true }
serde_json = { workspace = true }
