[package]
name = "resalt-ldap"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lazy_static = "1.4.0"
ldap3 = { version = "0.11.1", features = ["tls-native"], default-features = false }
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
