[package]
name = "resalt-ldap"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
once_cell = { workspace = true }
ldap3 = { version = "0.11.1", features = ["tls-native"], default-features = false }
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
