[package]
name = "resalt-middleware"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
futures = "0.3.21"
log = { workspace = true }
resalt-auth = { path = "../resalt-auth" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-storage = { path = "../resalt-storage" }