[package]
name = "resalt-models"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4.31"