[package]
name = "resalt-routes"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
include_dir = "0.7.2"
jsonpath_lib = "0.3.0"
log = { workspace = true }
resalt-auth = { path = "../resalt-auth" }
resalt-config = { path = "../resalt-config" }
resalt-ldap = { path = "../resalt-ldap" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
resalt-updater = { path = "../resalt-updater" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
urlencoding = "2.1.2"