[package]
name = "resalt-routes"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
include_dir = "0.7.2"
jsonpath_lib = "0.3.0"
log = { workspace = true }
resalt-auth = { path = "../resalt-auth" }
resalt-config = { path = "../resalt-config" }
resalt-ldap = { path = "../resalt-ldap" }
resalt-models = { path = "../resalt-models" }
resalt-salt = { path = "../resalt-salt" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
resalt-updater = { path = "../resalt-updater" }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1.2"
tower-http = { workspace = true }