[package]
name = "resalt-salt"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-stream = "0.3.5"
futures = "0.3.21"
futures-core = "0.3.21"
log = { workspace = true }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"