[package]
name = "resalt-salt"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-stream = "0.3.5"
futures = "0.3.21"
futures-core = "0.3.21"
log = { workspace = true }
reqwest = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
serde = { workspace = true }
serde_json = { workspace = true }