[package]
name = "resalt-scheduler"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clokwerk = "0.4.0"
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-ldap = { path = "../resalt-ldap" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
tokio = { workspace = true }