[package]
name = "resalt-storage_files"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
log = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }