[package]
name = "resalt-storage_mysql"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = "0.4.24"
diesel = { version = "2.1.0", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
log = { workspace = true }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["serde", "v4"] }