[package]
name = "resalt-storage_redis"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log = { workspace = true }
r2d2 = "0.8.10"
rand = "0.8.5"
redis = { version = "0.23.1", features = ['r2d2'] }
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-security = { path = "../resalt-security" }
resalt-storage = { path = "../resalt-storage" }
serde_json = { workspace = true }
uuid = { workspace = true }