[package]
name = "resalt-storage_redis"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
r2d2 = "0.8.10"
redis = { version = "0.23.3", features = ["r2d2", "streams", "keep-alive", "json"], default-features = false }
resalt-models = { path = "../resalt-models" }
resalt-storage = { path = "../resalt-storage" }
serde_json = { workspace = true }
uuid = { workspace = true }
