[package]
name = "resalt-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
jsonpath_lib = "0.3.0"
log = { workspace = true }
rand = "0.8.5"
resalt-config = { path = "../resalt-config" }
resalt-models = { path = "../resalt-models" }
resalt-security = { path = "../resalt-security" }
serde_json = "1.0.82"
version-compare = "0.1.0"