[package]
name = "resalt-updater"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
reqwest = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
once_cell = { workspace = true }
toml = { version = "0.8.8", features = ["parse"], default-features = false }