[package]
name = "resalt_auth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features=["compress-gzip"], default-features = false }
chrono = "0.4.24"
log = { version = "0.4.17" }
resalt_config = { path = "../resalt_config" }
resalt_ldap = { path = "../resalt_ldap" }
resalt_models = { path = "../resalt_models" }
resalt_salt = { path = "../resalt_salt" }
resalt_security = { path = "../resalt_security" }
resalt_storage = { path = "../resalt_storage" }
serde_json = "1.0.82"