[package]
name = "resalt_auth"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
actix-web = { workspace = true }
chrono = "0.4.24"
log = { workspace = true }
resalt_config = { path = "../resalt_config" }
resalt_ldap = { path = "../resalt_ldap" }
resalt_models = { path = "../resalt_models" }
resalt_salt = { path = "../resalt_salt" }
resalt_security = { path = "../resalt_security" }
resalt_storage = { path = "../resalt_storage" }
serde_json = "1.0.82"