[package]
name = "resalt_config"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["toml"],  default-features = false }
lazy_static = "1.4.0"
log = { version = "0.4.17" }
rand = "0.8.5"