[package]
name = "resalt_ldap"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lazy_static = "1.4.0"
ldap3 = { version = "0.11.1", features = ["tls-native"], default-features = false }
log = { workspace = true }
resalt_config = { path = "../resalt_config" }
resalt_models = { path = "../resalt_models" }
resalt_storage = { path = "../resalt_storage" }
