[package]
name = "resalt_middleware"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
futures = "0.3.21"
log = { version = "0.4.17" }
resalt_auth = { path = "../resalt_auth" }
resalt_models = { path = "../resalt_models" }
resalt_salt = { path = "../resalt_salt" }
resalt_storage = { path = "../resalt_storage" }