[package]
name = "resalt_models"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4.24"