[package]
name = "resalt_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features=["compress-gzip"], default-features = false }
chrono = "0.4"
futures = "0.3.21"
resalt_models = { path = "../resalt_models" }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["rt-multi-thread"], default-features = false }