[package]
name = "resalt_routes"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features=["compress-gzip"], default-features = false }
include_dir = "0.7.2"
jsonpath_lib = "0.3.0"
log = { version = "0.4.17" }
resalt_auth = { path = "../resalt_auth" }
resalt_config = { path = "../resalt_config" }
resalt_ldap = { path = "../resalt_ldap" }
resalt_models = { path = "../resalt_models" }
resalt_salt = { path = "../resalt_salt" }
resalt_security = { path = "../resalt_security" }
resalt_storage = { path = "../resalt_storage" }
resalt_updater = { path = "../resalt_updater" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
urlencoding = "2.1.2"