[package]
name = "resalt_salt"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features=["macros", "compress-gzip"], default-features = false }
actix-tls = { version = "3.0.3", features=["openssl"], default-features = false }
openssl = "0.10.55"
async-stream = "0.3.3"
awc = { version = "3.1.1", features=["openssl", "compress-gzip"], default-features = false }
chrono = "0.4.24"
futures = "0.3.21"
futures-core = "0.3.21"
lazy_static = "1.4.0"
log = { version = "0.4.17" }
regex = "1.6.0"
resalt_config = { path = "../resalt_config" }
resalt_models = { path = "../resalt_models" }
resalt_storage = { path = "../resalt_storage" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["rt-multi-thread"], default-features = false }